PFFT manual: structure

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -148,7 +148,7 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
   \include{features} % mit Seitenumbruechen
   \include{interface} % mit Seitenumbruechen
   \include{reference} % mit Seitenumbruechen
-%   \include{develop} % mit Seitenumbruechen
+  \include{develop} % mit Seitenumbruechen
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % \selectbiblanguage{english}
