PFFT: implemented fftshift feature

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -56,6 +56,8 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
 % \numberwithin{algorithm}{chapter}
 
 \usepackage{xspace}
+\usepackage{nicefrac}
+\usepackage{dsfont}
 
 %% activate for compact page layout
 % \usepackage{geometry}
@@ -117,7 +119,7 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
   \begin{titlepage}
     \begin{center}
       \vspace*{3cm}
-      {\Huge {\textbf{\textsf{PFFT User Manual\footnote{This work was partly supported by the BMBF grant 01IH08001B.}\\}}}}
+      {\Huge {\textbf{\textsf{PFFT User Manual\footnote{This work was supported by the BMBF grant 01IH08001B from 01.01.2010 until 31.03.2013.}\\}}}}
 
       \vspace*{0.5cm}
       for version \pfftversion
