--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -59,6 +59,8 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
 \usepackage{nicefrac}
 \usepackage{dsfont}
 
+\usepackage{todonotes}
+
 %% activate for compact page layout
 % \usepackage{geometry}
 % \geometry{top=30.4mm, left=30.4mm, text={155mm,240mm}, headheight=10mm, headsep=5mm, includemp, marginparwidth=15.4mm}
@@ -136,9 +138,11 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
     \vspace*{3cm}
       Download \textbf{\Large P}arallel \textbf{\Large F}ast \textbf{\Large F}ourier \textbf{\Large T}ransform Software Library at \\
       {\large \websoft}\\
+      \todo{use github link}
     \end{center}
   \end{titlepage}
 
+  \listoftodos
   \tableofcontents
  
 
